add/configure gruntfile, other basic setup

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
 
   <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src = "app.js"></script>
   <script src = "js/letter.js"></script>
   <script src = "js/square.js"></script>
   <script src = "js/board.js"></script>
