--- a/app/index.html
+++ b/app/index.html
@@ -4,14 +4,9 @@
 <head>
   <title>Word Wars</title>
 
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-
+  <link rel="stylesheet" type="text/css" href="./index.css">
   <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src = "app.js"></script>
-  <script src = "js/letter.js"></script>
-  <script src = "js/square.js"></script>
-  <script src = "js/board.js"></script>
-  <script src = "js/app.js"></script>
 </head>
 
 <body>
