--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
+
 <html>
 
 <head>
   <title>Word Wars</title>
-
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="./index.css">
   <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
   <script src = "app.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
 </head>
 
