reorganized main function, edited css, added button

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
   <div id = "rightColumn">
     <div id = "board"></div>
     <div id = "tray"></div>
+    <input type = "button" value = "Play Word">
   </div>
 </body>
 
