add ui improvements, refactor board func to render and addListeners

--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,10 @@
   </div>
 
   <div id = "rightColumn">
-    <div id = "board"></div>
-    <div id = "tray"></div>
+    <div id = "game">
+      <div id = "board"></div>
+      <div id = "tray"></div>
+    </div>
     <input type = "button" value = "Play Word">
   </div>
 </body>
