start adding socket.io stuff, try to improve tray letter ui but fail

--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,11 @@
   <link rel="stylesheet" type="text/css" href="./index.css">
   <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+  <script src="https://cdn.socket.io/socket.io-1.0.6.js"></script>
   <script src = "app.js"></script>
-
 </head>
-
 <body>
-  <div id = "leftColumn">
+  <div id = "left-column">
     <div>
       (title / logo)<br>
       Board type:
@@ -39,7 +38,7 @@
     <div id = "connection-info">Connection info: </div>
   </div>
 
-  <div id = "rightColumn">
+  <div id = "right-column">
     <div id = "game">
       <div id = "board"></div>
       <div id = "tray"></div>
