start basic multiplayer functionality

--- a/app/index.html
+++ b/app/index.html
@@ -14,20 +14,25 @@
 <body>
   <div id = "left-column">
     <div>
-      (title / logo)<br>
+      (title / logo)
+      <div id = "login-box">
+        Username <input type = "text" id = "user-name">
+        <input type = "button" value = "Log in" id = "login-button">
+        <br>
+      </div>
       Board type:
         <select id="board-type">
-                <option value="scrabble" selected>Scrabble</option>
-                <option value="wordsWithFriends">Words with Friends</option>
-                <option value="diamond" >Diamond</option>
+          <option value="scrabble" selected>Scrabble</option>
+          <option value="wordsWithFriends">Words with Friends</option>
+          <option value="diamond" >Diamond</option>
         </select>
-        <br />
+        <br>
         Game type:
         <select id="player-number">
-            <option value="1" selected>Solo</option>
-            <option value="2">2 Players</option>
+          <option value="1" selected>Solo</option>
+          <option value="2">2 Players</option>
         </select>
-        <br />
+        <br>
         <input type = "button" value = "New Game" id = "new-game-button">
 
       <input type = "button" value = "Shuffle Tray" id = "shuffle-tray-button">
@@ -36,6 +41,7 @@
     </div>
 
     <div id = "connection-info">Connection info: </div>
+    <div id = "game-lobby">Game Lobby: </div>
   </div>
 
   <div id = "right-column">
