add second player tray for local multiplayer, generalize board.retrieveLetter

--- a/app/index.html
+++ b/app/index.html
@@ -47,9 +47,11 @@
   <div id = "right-column">
     <div id = "game">
       <div id = "board"></div>
-      <div id = "tray"></div>
+      <div id = "player-1-tray" class="tray"></div>
+      <div id = "player-2-tray" class="tray"></div>
+
     </div>
-    <input type = "button" value = "Play Word">
+    <input type = "button" id = "done-button" value = "Play Word">
   </div>
 </body>
 
