--- a/app/index.html
+++ b/app/index.html
@@ -28,9 +28,10 @@
         </select>
         <br>
         Game type:
-        <select id="player-number">
-          <option value="1" selected>Solo</option>
-          <option value="2">2 Players</option>
+        <select id="game-type">
+          <option value="local 1">Practice game</option>
+          <option value="local 2" selected>2 Player local game</option>
+          <option value="network 2">2 Player network game</option>
         </select>
         <br>
         <input type = "button" value = "New Game" id = "new-game-button">
