--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,8 @@
 
     <div id = "connection-info">Connection info: </div>
     <div id = "game-lobby">Game Lobby: </div>
+  
+    <!--div id="test">TEST</div-->
   </div>
 
   <div id = "right-column">
