--- a/app/index.html
+++ b/app/index.html
@@ -40,10 +40,10 @@
       <input type = "button" value = "Print Tray" id = "print-tray-button">
       <input type = "button" value = "Print Grid" id = "print-grid-button">
     </div>
-
+    <div id = "game-info"></div>
     <div id = "connection-info">Connection info: </div>
     <div id = "game-lobby">Game Lobby: </div>
-  
+
     <!--div id="test">TEST</div-->
   </div>
 
@@ -52,7 +52,7 @@
       <div id = "board"></div>
       <div id = "player-0-tray" class="tray"></div>
       <div id = "player-1-tray" class="tray"></div>
-
+      <div id = "whose-turn"></div>
     </div>
     <input type = "button" id = "done-button" value = "Play Word">
   </div>
