--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,10 @@
     <div id = "connection-info">Connection info: </div>
     <div id = "game-lobby">Game Lobby: </div>
   
-    <!--div id="test">TEST</div-->
+    <div id= "score">
+    test
+    </div>
+
   </div>
 
   <div id = "right-column">
