scores non-cumulative, checks for straight lines

--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <div id = "left-column">
+    Word Wars
     <div>
-      (title / logo)
       <div id = "login-box">
         Username <input type = "text" id = "user-name">
         <input type = "button" value = "Log in" id = "login-button">
@@ -44,9 +44,7 @@
     <div id = "connection-info">Connection info: </div>
     <div id = "game-lobby">Game Lobby: </div>
   
-    <div id= "score">
-    test
-    </div>
+    <div id= "score"></div>
 
   </div>
 
