--- a/app/index.html
+++ b/app/index.html
@@ -17,100 +17,63 @@
     <script src="https://cdn.socket.io/socket.io-1.0.6.js"></script>
     <script src = "app.js"></script>
 </head>
-<!--<<<<<<< HEAD-->
-<body id="main">
 
-<div id="left-column">
- <header><h1 class="hello-world"></h1>Word Wars</h1></header>
-    <article class="scorebox">
-      <section id="plyone">Player 1 Score</section>
-      <section id="plytwo">Player 2 Score</section>
-    </article>
-    <article id="tilebox">
-      <p>There are x number of tiles left</p>
-    </article>
-
-      <button type="input" value="New Game" style="margin-left:65px">New Game</button>
-      <button type= "input" value="Shuffle Tray">Shuffle Tray</button>
-      <button type="input" value="Continue Game">Continue Game</button>
-
-    <!--<button><input type = "button" value = "Print Tray" id = "print-tray-button"></button>
-      <select id="board-type">
-          <option value="scrabble" selected>Scrabble</option>
-          <option value="wordsWithFriends">Words with Friends</option>
-          <option value="diamond" >Diamond</option>
-      </select>-->
-</div>
-
-<div id="right-column">
-  <div id="container">
-  <div id = "board"></div>
-  </div>
-
-      <!--<div id="whose-turn"></div>-->
-
-
-      <button value="Play Word" style="margin-left:155px; margin-right:15px">Play Word</button>
-      <button value="1">One Player</button>
-      <button value="2">2 Players</button>
-
-
-      <div class="tray">
-      <div id="player-0-tray"></div>
-      <div id="player-1-tray"></div>
-      </div>
-<!--=======
-<body>
+<body id = "main">
   <div id = "left-column">
-    Word Wars
-    <div>
+    <header><h1 class="hello-world"></h1>Word Wars</h1></header>
+
+    <div id= "score"></div>
+
+    <div id = "tilebox">
+      <p>There are x number of tiles left</p>
       <div id = "login-box">
         Username <input type = "text" id = "user-name">
         <input type = "button" value = "Log in" id = "login-button">
         <br>
       </div>
       Board type:
-        <select id="board-type">
-          <option value="scrabble" selected>Scrabble</option>
-          <option value="wordsWithFriends">Words with Friends</option>
-          <option value="diamond" >Diamond</option>
-          <option value="donut" >Donut</option>
-        </select>
-        <br>
-        Game type:
-        <select id="game-type">
-          <option value="local 1">Practice game</option>
-          <option value="local 2" selected>2 Player local game</option>
-          <option value="local 3">3 Player local game</option>
-          <option value="local 4">4 Player local game</option>
-          <option value="network 2">2 Player network game</option>
-        </select>
-        <br>
-        <input type = "button" value = "New Game" id = "new-game-button">
-
-
+      <select id="board-type">
+        <option value="scrabble" selected>Scrabble</option>
+        <option value="wordsWithFriends">Words with Friends</option>
+        <option value="diamond" >Diamond</option>
+        <option value="donut" >Donut</option>
+      </select>
+      <br>
+      Game type:
+      <select id="game-type">
+        <option value="local 1">Practice game</option>
+        <option value="local 2" selected>2 Player local game</option>
+        <option value="local 3">3 Player local game</option>
+        <option value="local 4">4 Player local game</option>
+        <option value="network 2">2 Player network game</option>
+      </select>
+      <br>
+      <input type = "button" value = "New Game" id = "new-game-button">
       <input type = "button" value = "Print Tray" id = "print-tray-button">
       <input type = "button" value = "Print Grid" id = "print-grid-button">
+
+      <div id = "game-info"></div>
+      <div id = "connection-info">Connection info: </div>
+     <div id = "game-lobby">Game Lobby: </div>
     </div>
-    <div id = "game-info"></div>
-    <div id = "connection-info">Connection info: </div>
-    <div id = "game-lobby">Game Lobby: </div>
-
-    <div id= "score"></div>
-
   </div>
 
   <div id = "right-column">
     <div id = "game">
-      <div id = "board"></div>
+
+      <div id = "container">
+        <div id = "board"></div>
+      </div>
+
       <div id = "player-0-tray" class="tray"></div>
       <div id = "player-1-tray" class="tray"></div>
-      <div id = "player-2-tray" class="tray"></div>
-      <div id = "player-3-tray" class="tray"></div>
+      <!--div id = "player-2-tray" class="tray"></div-->
+      <!--div id = "player-3-tray" class="tray"></div-->
       <div id = "whose-turn"></div>
+      <input type = "button" class = "blue-input" id = "done-button" value = "Play Word">
+      <input type = "button" class = "blue-input" id = "shuffle-tray-button" value = "Shuffle Tray">
+
     </div>
-    <input type = "button" id = "done-button" value = "Play Word">
-    <input type = "button" value = "Shuffle Tray" id = "shuffle-tray-button">
   </div>
   <div id="overlay">
     <div>
@@ -142,7 +105,7 @@
       <button class="letter-button" value="Y">Y</button>
       <button class="letter-button" value="Z">Z</button>
     </div>
->>>>>>> 9fb90d10ade9bacea19356752a6e3b155832bb22-->
+<!-- >>>>>>> 9fb90d10ade9bacea19356752a6e3b155832bb22-->
   </div>
 </body>
 </html>
