add dictionary, add reset button

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,6 @@
     <div id = "game-lobby">Game Lobby: </div>
 
     <div id= "score">
-    test
     </div>
 
   </div>
@@ -62,8 +61,9 @@
       <div id = "player-3-tray" class="tray"></div>
       <div id = "whose-turn"></div>
     </div>
-    <input type = "button" id = "done-button" value = "Play Word">
-    <input type = "button" value = "Shuffle Tray" id = "shuffle-tray-button">
+    <input type = "button" class = "game-button" id = "done-button" value = "Play Word">
+    <input type = "button" class = "game-button" id = "shuffle-tray-button" value = "Shuffle Tray" >
+    <input type = "button" class = "game-button" id = "return-letters-button" value = "Return Letters">
   </div>
   <div id="overlay">
     <div>
