--- a/app/signin.html
+++ b/app/signin.html
@@ -5,26 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" type="text/css" href="./signin.css">
-    <link rel="stylesheet" type="text/css" href="./index.css">
-    <link rel="stylesheet" type="text/css" href="./base.css">
-    <link rel="stylesheet" type="text/css" href="./layout.css">
-    <link rel="stylesheet" type="text/css" href="./typography.css">
-    <link rel="stylesheet" type="text/css" href="./theme.css">
-    <link rel="stylesheet" type="text/css" href="./module.css">
-    <link rel="stylesheet" type="text/css" href="./state.css">
 
-    <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-    <script src="https://cdn.socket.io/socket.io-1.0.6.js"></script>
-    <script src = "app.js"></script>
-  </head>
+</head>
 
 
-<body id="main">
-<header class="signin">
-  <h1 class="hello-world">The logo goes here</h1>
-</header>
+<body>
+  <div id="container">
+    <header>
+      <h1 class="hello-world"><h1>The logo goes here</h1>
+    </header>
+  </div>
 
+
+
+
+<!--
     <div>
       (title / logo)
       <div id = "login-box">
@@ -36,6 +31,10 @@
 
 
 
-<footer></footer>
+<footer></footer>-->
+    <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.0.6.js"></script>
+    <script src = "app.js"></script>
 </body>
 </html>
