add imperfect fix for tiles dropping through tray to board

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <header><h1 class="hello-world"></h1><strong>Word Wars</strong></h1></header>
       <div id= "score"></div>
         <div id = "tilebox">
-          <p>There are x number of tiles left</p>
+          <p id = "tilenums"></p>
         <div id = "login-box">
           Username <input type = "text" id = "user-name">
           <input type = "button" value = "Log in" id = "login-button">
@@ -63,6 +63,8 @@
 
       <div id = "player-0-tray" class="tray"></div>
       <div id = "player-1-tray" class="tray"></div>
+      <div id = "player-2-tray" class="tray"></div>
+      <div id = "player-3-tray" class="tray"></div>
 
       </section>
       <section>
