--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <title>Word Wars</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta property="og:image" content="/facebook.jpg"/>
     <link rel="stylesheet" type="text/css" href="./index.css">
     <link rel="stylesheet" type="text/css" href="./base.css">
     <link rel="stylesheet" type="text/css" href="./layout.css">
@@ -22,6 +23,15 @@
         <div id = "login-box">
           Username <input type = "text" id = "user-name">
           <input type = "button" value = "Log in" id = "login-button">
+          <div id="fb-root"></div>
+          <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=591234984329193&version=v2.0";
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));</script>
+          <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-type="button"></div>
 
         </div>
             Board type:
