--- a/app/index.html
+++ b/app/index.html
@@ -16,13 +16,13 @@
 
 <body id = "main">
   <div id = "left-column">
-    <header><h1 class="hello-world"></h1><strong>Word Wars</strong></h1></header>
+    <header><strong>Word Wars</strong></h1></header>
       <div id= "score"></div>
         <div id = "tilebox">
           <p id = "tilenums"></p>
         <div id = "login-box">
           Username <input type = "text" id = "user-name">
-          <input type = "button" value = "Log in" id = "login-button">
+          <input type = "button" value = "Log in" id = "login-button">          <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-type="button"></div>
           <div id="fb-root"></div>
           <script>(function(d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
@@ -31,7 +31,7 @@
             js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=591234984329193&version=v2.0";
             fjs.parentNode.insertBefore(js, fjs);
           }(document, 'script', 'facebook-jssdk'));</script>
-          <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-type="button"></div>
+
 
         </div>
             Board type:
