hopefully this works

--- a/app/index.html
+++ b/app/index.html
@@ -22,13 +22,13 @@
     <header><h1 class="reflected"><strong>Word Wars!</strong></h1></header>
       <p id= "score"></p>
         <div id = "tilebox">
-<<<<<<< HEAD
+
           <p id="tilecount">There are x number of tiles left</p>
 
         <!--
-=======
+
           <p id = "tilenums"></p>
->>>>>>> master
+
         <div id = "login-box">
           Username <input type = "text" id = "user-name">
           <input type = "button" value = "Log in" id = "login-button">
@@ -36,7 +36,7 @@
         </div>-->
 
         <strong>Board type:</strong>
-          <select>
+          <select id ="board-type">
             <option value="scrabble" selected>Scrabble</option>
             <option value="wordsWithFriends">Words with Friends</option>
             <option value="diamond" >Diamond</option>
