--- a/app/index.html
+++ b/app/index.html
@@ -132,6 +132,7 @@
       <button class="letter-button" value="Z">Z</button>
     </div>
   </div>
+  <div id = "spelled-word"></div>
     <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.0.6.js"></script>
