add support for passing on any turn

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
       <p id= "score"></p>
         <div id = "tilebox">
 
-          <p id="tilecount">There are x number of tiles left</p>
+          <p id="tilecount"></p>
 
 
 
