play word button now says pass if you havent played a letter

--- a/app/index.html
+++ b/app/index.html
@@ -92,7 +92,7 @@
       </section>
       <section>
         <ul>
-          <li><input type = "button" class = "blue-input game-button" id = "done-button" value = "Play Word"></li>
+          <li><input type = "button" class = "blue-input game-button" id = "done-button" value = "Pass"></li>
           <li><input type = "button" class = "blue-input game-button" id = "shuffle-tray-button" value = "Shuffle Tray"></li>
           <li><input type = "button" class = "blue-input game-button" id = "return-letters-button" value = "Return Letters"></li>
           <li><div id = "whose-turn"></div></li>
