speed-up page, run npm install first

--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,7 @@
   <meta content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta property="og:image" content="/facebook.jpg"/>
-  <link rel="stylesheet" type="text/css" href="./index.css">
-  <link rel="stylesheet" type="text/css" href="./base.css">
-  <link rel="stylesheet" type="text/css" href="./layout.css">
-  <link rel="stylesheet" type="text/css" href="./typography.css">
-  <link rel="stylesheet" type="text/css" href="./module.css">
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
@@ -132,10 +128,10 @@
     </div>
   </div>
     <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.0.6.js"></script>
     <script src = "app.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
+    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>-->
 </body>
 </html>
 
