--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
       <button class="letter-button" value="E">E</button>
       <button class="letter-button" value="F">F</button>
       <button class="letter-button" value="G">G</button>
-      <button class="letter-button" value="H">H</button>
+      <button class="letter-button" value="H">H</button><br>
       <button class="letter-button" value="I">I</button>
       <button class="letter-button" value="J">J</button>
       <button class="letter-button" value="K">K</button>
@@ -107,7 +107,7 @@
       <button class="letter-button" value="N">N</button>
       <button class="letter-button" value="O">O</button>
       <button class="letter-button" value="P">P</button>
-      <button class="letter-button" value="Q">Q</button>
+      <button class="letter-button" value="Q">Q</button><br>
       <button class="letter-button" value="R">R</button>
       <button class="letter-button" value="S">S</button>
       <button class="letter-button" value="T">T</button>
