--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta property="og:image" content="/facebook.jpg"/>
-  <link rel="stylesheet" type="text/css" href="./style.css"/>
-  <!--<link rel="stylesheet" type="text/css" href="./index.css"/>-->
+  <!--<link rel="stylesheet" type="text/css" href="./style.css"/>-->
+  <link rel="stylesheet" type="text/css" href="./index.css"/>
   <link rel="stylesheet" type="text/css" href="./layout.css"/>
   <link rel="stylesheet" type="text/css" href="./base.css"/>
   <link rel="stylesheet" type="text/css" href="./tray.css"/>
