add back actual scrabble layout, rename Erics scrabble board as biggerScrabble

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
         <strong>Board type:</strong>
         <select id ="board-type">
           <option value="scrabble" selected>Scrabble</option>
+          <option value="biggerScrabble">Big Board Scrabble</option>
           <option value="wordsWithFriends">Words with Friends</option>
           <option value="diamond" >Diamond</option>
           <option value="donut" >Donut</option>
