--- a/app/index.html
+++ b/app/index.html
@@ -80,11 +80,13 @@
       <div id = "player-3-tray" class="tray"></div>
 
       </section>
+      <input type = "button" class = "blue-input game-button" id = "return-letters-button" value = "&#8634;">
+
       <section>
         <ul>
           <li><input type = "button" class = "blue-input game-button" id = "done-button" value = "Pass"></li>
           <li><input type = "button" class = "blue-input game-button" id = "shuffle-tray-button" value = "Shuffle Tray"></li>
-          <li><input type = "button" class = "blue-input game-button" id = "return-letters-button" value = "Return Letters"></li>
+          <li><input type = "button" class = "blue-input game-button" id = "turn-in-button" value = "Turn In Letters"></li>
           <li><div id = "whose-turn" class = "blue-input"></div></li>
         </ul>
       </section>
