connect turn in letters button, add css animation to button

--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
       <div id = "player-3-tray" class="tray"></div>
 
       </section>
-      <input type = "button" class = "blue-input game-button" id = "return-letters-button" value = "&#8634;">
+      <div class = "blue-input game-button" id = "return-letters-button" value = ""><div>&#8634;</div></div>
 
       <section>
         <ul>
