fixed score bug, edited boards, began mobile layout

--- a/app/index.html
+++ b/app/index.html
@@ -68,21 +68,21 @@
   </div>
 
   <div id = "right-column">
-    <div id = "game">
+    <!div id = "game">
       <div id = "container">
         <div id = "board"></div>
       </div>
       <section id = "tray-container">
 
-      <div id = "player-0-tray" class="tray"></div>
-      <div id = "player-1-tray" class="tray"></div>
-      <div id = "player-2-tray" class="tray"></div>
-      <div id = "player-3-tray" class="tray"></div>
+        <div id = "player-0-tray" class="tray"></div>
+        <div id = "player-1-tray" class="tray"></div>
+        <div id = "player-2-tray" class="tray"></div>
+        <div id = "player-3-tray" class="tray"></div>
 
       </section>
       <div class = "blue-input game-button" id = "return-letters-button" value = ""><div>&#8634;</div></div>
 
-      <section>
+      <section id = "button-container">
         <ul>
           <li><input type = "button" class = "blue-input game-button" id = "done-button" value = "Pass"></li>
           <li><input type = "button" class = "blue-input game-button" id = "shuffle-tray-button" value = "Shuffle Tray"></li>
@@ -90,7 +90,7 @@
           <li><div id = "whose-turn" class = "blue-input"></div></li>
         </ul>
       </section>
-    </div>
+    <!/div>
   </div>
 
   <div id="overlay">
