--- a/app/index.html
+++ b/app/index.html
@@ -56,9 +56,9 @@
 
 
 
-      <input type = "button" value = "Print Tray" id = "print-tray-button">
+      <!--<input type = "button" value = "Print Tray" id = "print-tray-button">
       <input type = "button" value = "Print Grid" id = "print-grid-button">
-      <input type = "button" value = "Print Placed" id = "print-placed-button">
+      <input type = "button" value = "Print Placed" id = "print-placed-button">-->
 
 
       <!--<div id = "game-info"></div>
