--- a/app/index.html
+++ b/app/index.html
@@ -60,10 +60,10 @@
       <input type = "button" value = "Print Grid" id = "print-grid-button">
       <input type = "button" value = "Print Placed" id = "print-placed-button">-->
 
-      <input type = "button" value = "Print Tray" id = "print-tray-button" class = "debug-button">
+      <!--<input type = "button" value = "Print Tray" id = "print-tray-button" class = "debug-button">
       <input type = "button" value = "Print Grid" id = "print-grid-button" class = "debug-button">
       <input type = "button" value = "Print Placed" id = "print-placed-button" class = "debug-button">
-      <input type = "button" value = "Hide Debug" id = "hide-debug-button" class = "debug-button">
+      <input type = "button" value = "Hide Debug" id = "hide-debug-button" class = "debug-button">-->
 
 
       <!--<div id = "game-info"></div>
